[package]
name = "einsum"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.10.3"
rand = "0.8"
halo2_gadgets = { git = "https://github.com/zkonduit/halo2" }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", rev = "b753a832e92d5c86c5c997327a9cf9de86a18851", features = [
    "derive_serde",
] }
halo2_proofs = { git = "https://github.com/zkonduit/halo2", package = "halo2_proofs", features = [
    "circuit-params",
] }
ff = { version = "0.13", features = ["bits"] }
